# ion-game-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ion.code-workspace  package-lock.json  package.json
include/: App.hpp  Bench.hpp  Benchmark.hpp  Console.hpp  Lazy.hpp  Logger.hpp  Process.hpp  ScriptManager.hpp  SubSystem.hpp  Utils.hpp  pch.hpp
include/js/: Utils.hpp
scripts/: tsconfig.json
scripts/src/: build-v8.ts
src/: App.cpp  Console.cpp  Logger.cpp  Process.cpp  ScriptManager.cpp  ion.cpp
src/js/: Utils.cpp
test-game/: package-lock.json  package.json  tsconfig.json
test-game/src/: index.ts
test-game/types/: console.d.ts  index.d.ts
